force-app/main/default/objects/MD_Asset__c/MD_Asset__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Machine</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Diagnostic Machine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnostic Machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>