force-app/main/default/objects/MD_Asset__c/fields/Address_Line_2_Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2_Bill_to__c</fullName>
    <formula>AccountId__r.Addess_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2 (Bill to)</label>
    <type>Text</type>
</CustomField>