force-app/main/default/objects/MD_Asset__c/fields/Agreement_Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Availability_Status__c</fullName>
    <label>Agreement Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>In process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>