force-app/main/default/objects/MD_Asset__c/fields/Asset_Level__c.field-meta.xml
<CustomField>
    <fullName>Asset_Level__c</fullName>
    <label>Asset Level</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>