force-app/main/default/objects/MD_Asset__c/fields/AssetProvidedById__c.field-meta.xml
<CustomField>
    <fullName>AssetProvidedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Provided By</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Asset1</relationshipName>
    <type>Lookup</type>
</CustomField>