force-app/main/default/objects/MD_Asset__c/fields/AssetServicedById__c.field-meta.xml
<CustomField>
    <fullName>AssetServicedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Serviced By</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Asset2</relationshipName>
    <type>Lookup</type>
</CustomField>