force-app/main/default/objects/MD_Asset__c/fields/Competitor_Asset__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Asset</label>
    <type>Checkbox</type>
</CustomField>