force-app/main/default/objects/MD_Asset__c/fields/Consequence_Of_Failure__c.field-meta.xml
<CustomField>
    <fullName>Consequence_Of_Failure__c</fullName>
    <label>Consequence Of Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critiical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>