force-app/main/default/objects/MD_Asset__c/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipLabel>Diagnostic Machines</relationshipLabel>
    <relationshipName>Diagnostic_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>