force-app/main/default/objects/MD_Asset__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <formula>TEXT (Sales_Area__r.Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>