force-app/main/default/objects/MD_Asset__c/fields/Digital_Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Digital_Asset_Status__c</fullName>
    <label>Digital Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>