force-app/main/default/objects/MD_Asset__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>Sap Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>