force-app/main/default/objects/MD_Asset__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Machine Issue Date</label>
    <type>Date</type>
</CustomField>