force-app/main/default/objects/MD_Asset__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <formula>Product__r.Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>