force-app/main/default/objects/MD_Asset__c/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Product</label>
    <referenceTo>MD_OpportunityLineItem__c</referenceTo>
    <relationshipLabel>Asset,,</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>