force-app/main/default/objects/MD_Asset__c/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Asset</label>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipName>Asset1</relationshipName>
    <type>Lookup</type>
</CustomField>