force-app/main/default/objects/MD_Asset__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>TEXT (Sales_Area__r.Delivering_Plant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivering Plant</label>
    <type>Text</type>
</CustomField>