force-app/main/default/objects/MD_Asset__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Proposal</label>
    <referenceTo>MD_Quote__c</referenceTo>
    <relationshipLabel>Asset Records</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>