force-app/main/default/objects/MD_Asset__c/fields/RootAssetId__c.field-meta.xml
<CustomField>
    <fullName>RootAssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Asset</label>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>