force-app/main/default/objects/MD_Asset__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>MD_Sales_Area__c</referenceTo>
    <relationshipLabel>Diagnostic Machines</relationshipLabel>
    <relationshipName>Diagnostic_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>