force-app/main/default/objects/MD_Asset__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <formula>text (Sales_Area__r.Sales_District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales District</label>
    <type>Text</type>
</CustomField>