force-app/main/default/objects/MD_Asset__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <formula>TEXT (Sales_Area__r.Sales_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>