force-app/main/default/objects/MD_Asset__c/fields/SAP_Account_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_No__c</fullName>
    <label>SAP Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>