force-app/main/default/objects/MD_Asset__c/fields/Search__c.field-meta.xml
<CustomField>
    <fullName>Search__c</fullName>
    <defaultValue>(&quot;--&quot;)</defaultValue>
    <label>Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>