force-app/main/default/objects/MD_Asset__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <formula>Product__r.Standard_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>