force-app/main/default/objects/MD_Asset__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <formula>text ( Product__r.Technology__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology</label>
    <type>Text</type>
</CustomField>