force-app/main/default/objects/MD_Asset__c/fields/Usage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Usage_End_Date__c</fullName>
    <label>Usage End Date</label>
    <type>Date</type>
</CustomField>