force-app/main/default/objects/MD_Asset__c/fields/Uuid__c.field-meta.xml
<CustomField>
    <fullName>Uuid__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>