force-app/main/default/objects/MD_Asset__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>text (Product__r.Vendor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>