force-app/main/default/objects/MD_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>AccountId__c</columns>
    <columns>SAP_Account_No_Bill_To__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>