force-app/main/default/objects/MD_Asset__c/listViews/Sales_Team_Asset_Reminder_MD_Asset.listView-meta.xml
<ListView>
    <fullName>Sales_Team_Asset_Reminder_MD_Asset</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Team Asset Reminder</label>
    <queue>Sales_Team_Asset_Reminder</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>